A lil clippin fix

--- a/src/css/MyExpenses.css
+++ b/src/css/MyExpenses.css
@@ -18,6 +18,7 @@ body {
 }
 .pseudoMargin {
     height: 0vh;
+    margin-top: 4em;
 }
 
 @media screen and (max-width: 1024px) {
